--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,11 @@ dependencies {
 
     // JPA
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    // JUnit
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    // testRuntimeOnly: 해당 라이브러리가 테스트 실행 시에만 사용됨을 의미한다.
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
