--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,8 @@ spring.datasource.password=
 # ?? ????? ?? update ??? ????, ?? ????? none ?? validate? ?? ????.
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true 
+spring.jpa.properties.hibernate.show_sql=true
 
 
 
