--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,8 +24,12 @@ spring.datasource.password=
 # 개발 환경에서는 보통 update 모드를 사용하고, 운영 환경에서는 none 또는 validate를 주로 사용한다.
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true 
 spring.jpa.properties.hibernate.show_sql=true
+
+logging.level.org.hibernate.type=trace
+
 
 
 
