점프 투 스프링부트 => [3-06 회원 가입 기능 구현하기] 까지

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
+    // spring security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    // thymeleaf-extras-springsecurity6 패키지는 타임리프 템플릿 엔진과 스프링 시큐리티 프레임워크를 함께 사용할 때 필요한 타임리프의 확장 기능이다.
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+
     // thymeleaf
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
@@ -51,6 +56,7 @@ dependencies {
 
     // JUnit
     testImplementation 'org.junit.jupiter:junit-jupiter'
+
     // testRuntimeOnly: 해당 라이브러리가 테스트 실행 시에만 사용됨을 의미한다.
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
