datasource - postgres 설정 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,12 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
+#datasource:
+#driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+#url: jdbc:log4jdbc:postgresql://jadefromkorea.synology.me:54320/postgres
+#username: postgres
+#password: 123456
+
 # JPA
 # spring.jpa.properties.hibernate.dialect: 스프링 부트와 하이버네이트를 함께 사용할 때 필요한 설정 항목이다. 표준 SQL이 아닌 하이버네이트만의 SQL을 사용할 때 필요한 항목으로 하이버네이트의 org.hibernate.dialect.H2Dialect 클래스를 설정했다.
 # spring.jpa.hibernate.ddl-auto: 엔티티를 기준으로 데이터의 테이블을 생성하는 규칙을 설정한다.
