--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,16 +25,25 @@ spring.datasource.password=123456
 #password: 123456
 
 # JPA
-# spring.jpa.properties.hibernate.dialect: 스프링 부트와 하이버네이트를 함께 사용할 때 필요한 설정 항목이다. 표준 SQL이 아닌 하이버네이트만의 SQL을 사용할 때 필요한 항목으로 하이버네이트의 org.hibernate.dialect.H2Dialect 클래스를 설정했다.
-# spring.jpa.hibernate.ddl-auto: 엔티티를 기준으로 데이터의 테이블을 생성하는 규칙을 설정한다.
-#
 # none: 엔티티가 변경되더라도 데이터베이스를 변경하지 않는다.
 # update: 엔티티의 변경된 부분만 데이터베이스에 적용한다.
 # validate: 엔티티와 테이블 간에 차이점이 있는지 검사만 한다.
 # create: 스프링 부트 서버를 시작할 때 테이블을 모두 삭제한 후 다시 생성한다.
 # create-drop: create와 동일하지만 스프링 부트 서버를 종료할 때에도 테이블을 모두 삭제한다.
 # 개발 환경에서는 보통 update 모드를 사용하고, 운영 환경에서는 none 또는 validate를 주로 사용한다.
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+# create: 기존테이블 삭제 후 다시 생성 (DROP + CREATE)
+# create-drop: create와 같으나 종료시점에 테이블 DROP
+# update: 변경분만 반영(운영DB에서는 사용하면 안됨)
+# validate: 엔티티와 테이블이 정상 매핑되었는지만 확인
+# none: 사용하지 않음(사실상 없는 값이지만 관례상 none이라고 한다.)
+# 개발 초기 단계 또는 로컬에서 테스트 : create 또는 update
+# 테스트 서버 : update 또는 validate
+# 스테이징 및 운영 서버 : validate 또는 none
+
+# spring.jpa.properties.hibernate.dialect: 스프링 부트와 하이버네이트를 함께 사용할 때 필요한 설정 항목이다. 표준 SQL이 아닌 하이버네이트만의 SQL을 사용할 때 필요한 항목으로 하이버네이트의 org.hibernate.dialect.H2Dialect 클래스를 설정했다.
+# spring.jpa.hibernate.ddl-auto: 엔티티를 기준으로 데이터의 테이블을 생성하는 규칙을 설정한다.
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.database=postgresql
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true 
