--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,11 @@
 #spring.datasource.username=sa
 #spring.datasource.password=
 
+spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 #spring.datasource.url=jdbc:log4jdbc:postgresql://jadefromkorea.synology.me:54320/postgres
 spring.datasource.url=jdbc:log4jdbc:postgresql://jadefromkorea.synology.me:54320/asset
-spring.datasource.driverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://jadefromkorea.synology.me:54320/asset
 spring.datasource.username=postgres
 spring.datasource.password=123456
 
